# frc6343_scouting

./: .gitignore  README.md  setup.cfg  tbatool.py
frc6343_scouting/: __init__.py  cc_metrics.py  season.py  tbatool.py
scripts/: launcher.py
tbatool/: __main__.py  cc_metrics.py  season.py  special.py  tbatool.py
