[metadata]
name = frc6343_scouting
version = attr: frc6343_scouting.__VERSION__
description = A utility for analyzing Blue Alliance data
long_description = file: README.md
license_files = LICENSE

[options]
zip_safe = False
packages = find:
install_requires =
    tbapy == 1.3.2
    pandas
    numpy

[options.extras_require]
test = pytest

[tool:pytest]
addopts =
    -vv
    -ra
    --strict-markers
    --tb=short
testpaths = test

[options.entry_points]
console_scripts =
    tbatool = frc6343_scouting.tbatool:main
